--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     #gearTable td, #gearTable th { word-break: break-word; white-space: normal; padding: 4px; }
 
     /* ここで列幅を明示指定 */
-    #gearTable th:nth-child(1), #gearTable td:nth-child(1) { width: 7em; }  /* ジャンル */
+    #gearTable th:nth-child(1), #gearTable td:nth-child(1) { width: 8em; }  /* ジャンル */
     #gearTable th:nth-child(2), #gearTable td:nth-child(2) { width: 8em; }  /* メーカー */
     #gearTable th:nth-child(3), #gearTable td:nth-child(3) { width: 10em; } /* 機材名 */
 
@@ -37,7 +37,7 @@
     #gearTable.full-view td:nth-child(5), #gearTable.full-view td:nth-child(6),
     #gearTable.full-view td:nth-child(7) { width: 150px; }
 
-    #gearTable th:nth-child(8), #gearTable td:nth-child(8) { width: calc(7em + 8em + 10em); } /* 備考 */
+    #gearTable th:nth-child(8), #gearTable td:nth-child(8) { width: 26em); } /* 備考 */
   </style>
 </head>
 <body>
